# BulletPhysicsTry

./: .gitmodules  LICENSE  README.md  flake.nix
MyImpl/: CMakeLists.txt
MyImpl/include/: ProjectileSimulation.h  Renderer.h  Vec2.h
MyImpl/src/: ProjectileSimulation.cpp  Renderer.cpp  main.cpp
WithLib/: CMakeLists.txt
WithLib/include/: ProjectileSimulation.h  Renderer.h  Vec2.h
WithLib/src/: ProjectileSimulation.cpp  Renderer.cpp  main.cpp
